--- a/src/App.css
+++ b/src/App.css
@@ -2393,7 +2393,7 @@ nav.sidemenu {
     padding: 100px 0px;
   }
   
-  footer-copyright p {
+  .footer-copyright p {
     text-align: center;
   }
 
